# relief-story-agent

./: .gitignore  AGENTS.md  GEMINI_3_5_FLASH_DEVELOPMENT_HANDOFF.md  NEXT_SESSION_HANDOFF_REPORT.md  NEXT_SESSION_PROMPT.md  PROJECT_HANDOFF.md  PROJECT_STATUS.md  README.md  pyproject.toml  start_desktop_dev.bat  start_desktop_dev.vbs  start_relief_story_agent.bat
.github/workflows/: codex-plan.yml
desktop/electron/: .gitignore  README.md  package-lock.json  package.json
docs/: ACCEPTANCE_REPORT_TEMPLATE.md  COMFYUI_LTX23_GUIDE.md  LOCAL_DEPLOYMENT.md  TEMPLATE_GUIDE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  packaged-runtime.test.ts  style-system.test.ts  vite-env.d.ts
plans/: active.md
relief_story_agent/: README.md  __init__.py  acceptance.py  api.py  artifacts.py  batch_timeline.py  cli.py  comfyui.py  comfyui_endpoint.py  comfyui_outputs.py  config_validation.py  content.py  execution_policy.py  failure_policy.py  grid_image.py  image_providers.py  local_acceptance.py  local_demo.py  local_runtime.py  ltx_workflow.py  metrics.py  model_config.example.json  model_config.py  model_probe.py  model_runtime.py  models.py  orchestrator.py  output_contracts.py  pipeline.py  planning.py  prompt_profiles.py  prompt_templates.py  provenance.py  provider_catalog.py  providers.py  quality.py  recovery.py  resource_limits.py  run_audit.py  run_timeline.py  (+12 more)
relief_story_agent/examples/: batch_request.example.json  batch_request.full-ltx.example.json  (+10 more)
(+277 files in other folders)
