[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relief-story-agent"
version = "0.1.0"
description = "API-first multi-model screenplay agent for low-stimulation emotional-buffer shorts."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100",
  "httpx>=0.24",
  "openai>=1.0",
  "Pillow>=10.0",
  "pydantic>=2.0",
  "uvicorn>=0.20",
]

[project.scripts]
relief-story-agent = "relief_story_agent.cli:main"
relief-story-agent-server = "relief_story_agent.server:main"

[tool.setuptools]
packages = ["relief_story_agent"]

[tool.setuptools.package-data]
relief_story_agent = [
  "model_config.example.json",
  "examples/*.json",
  "examples/*.ps1",
  "examples/*.bat",
  "examples/templates/*.md",
]
